tests/parser_samples/valid/multiline_macros_def.mas
%m m1 {
    a;
}

%m m2(*) {
    a;
    b;
}

%m m3(1, 2) {
    a;
    b;
    c;
}

%i i1 { !nop; }