tests/parser_samples/invalid/root/0.mas
%m m {
    a | b | c;
}